--- a/trunk/theme/theme.css
+++ b/trunk/theme/theme.css
@@ -134,7 +134,7 @@ h1, h2, h3, h4, h5, h6{
 	background-color: #feff9b;
 }
 
-.site-home .description{
+.home .description{
 	float:right;
 	font-size:200%;
 	padding:15px;
@@ -143,7 +143,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 
-.site-home .description{
+.home .description{
 	float:right;
 	font-size:200%;
 	padding:15px;
