--- a/trunk/theme/style.css
+++ b/trunk/theme/style.css
@@ -207,6 +207,7 @@ img{
 	position: relative;
 	margin: 0 auto;
 	left: 0;
+	overflow-x:hidden;
 /*	min-height: 600px; */
 }
 
@@ -546,7 +547,6 @@ img{
 
 
 #dynamic-sidebar{
-	left:-240px;
 	position:absolute;
 	text-align:left;
 	z-index:100;
@@ -554,6 +554,7 @@ img{
 /*	background-color: #F3F8F8; */
 	background-color: white;
 	height: 100%;
+	z-index: 1000;
 }
 
 
@@ -580,6 +581,44 @@ img{
 
 #dynamic-sidebar .widget_text{
 	margin:0 auto;
+}
+
+
+#dynamic-sidebar{
+	-moz-box-shadow: 1px 2px 3px #AAAAAA;
+	-webkit-box-shadow:1px 2px 3px #AAAAAA;
+	box-shadow: 1px 2px 3px #AAAAAA;
+	border: 1px solid #eee;	
+	overflow-y: auto;
+	padding:10px;
+	width:260px;
+	z-index: 100;
+	top: 0;
+}
+
+.sidebar-widget-position-left{
+	left:-260px;
+}
+.sidebar-widget-position-right{
+	right:-260px;
+}
+
+.sidebar-widget-no-auto-hide{
+	right:auto !important;	
+	left:auto !important;	
+}
+
+
+.section-number{
+	color:#474747;
+	font-size:15px;
+	font-weight:bold;
+	height:18px;
+	padding:0 0;
+	position:absolute;
+	right:2px;
+	text-align:center;
+	width:15px;
 }
 
 
@@ -658,17 +697,6 @@ img{
 	background:url("images/Blackbubble_3digit.png") no-repeat scroll 0 0 transparent;
 }
 */
-
-.home #sidebar{
-	left: 0px;	
-}
-
-
-.page #sidebar{
-	left: 0;
-	width: 0;
-}
-
 
 
 
