--- a/trunk/theme/theme.css
+++ b/trunk/theme/theme.css
@@ -77,18 +77,7 @@ h1, h2, h3, h4, h5, h6{
 
 }
 
-#dynamic-sidebar{
-	-moz-box-shadow: 1px 2px 3px #AAAAAA;
-	-webkit-box-shadow:1px 2px 3px #AAAAAA;
-	box-shadow: 1px 2px 3px #AAAAAA;
-	border: 1px solid #eee;	
-	overflow-y: auto;
-	left:-240px;
-	padding:10px 20px;
-	width:220px;
-	z-index: 100;
-	top: 0;
-}
+
 
 
 #respond p{
@@ -186,6 +175,10 @@ h4 {
 	min-height:50px;
 	z-index:1;
 	
+}
+
+#dynamic-sidebar {
+	overflow-x: visible;
 }
 
 .frontpage .the_title, .site-home .the_title{
@@ -641,9 +634,12 @@ a{
 
 .sidebar .sidebar-item .commentcount1, .sidebar .sidebar-item .commentcount2, .sidebar .sidebar-item .commentcount3{
 	right: 0;
-	padding-right: 2px;
+	padding-right: 0px;
 }
 
+.sidebar .sidebar-item{
+	padding: 3px 25px;
+}
 
 #comments-sort-all{
 	display: none !important;
