detection of frontpage is better. sidebar text overflowing in webkit fixed.
fixed issue #72

--- a/trunk/theme/theme.css
+++ b/trunk/theme/theme.css
@@ -677,7 +677,8 @@ a{
 }
 
 .sidebar .sidebar-item{
-	width: 100%;
+	width: 240px;
+	padding: 3px 25px;
 }
 
 
@@ -728,7 +729,6 @@ a:hover{
 
 .sidebar .sidebar-item {
 	margin-left:-20px;
-	padding:3px 20px;
 }
 
 #live-post-search{
