--- a/trunk/theme/style.css
+++ b/trunk/theme/style.css
@@ -63,7 +63,7 @@ body {
 }
 
 
-h1, h2, h3, h4, h5, h6, h7, h8, strong{
+h1, h2, h3, h4, h5, h6, h7, h8{
 	padding: 0;
 	margin: 0;
 	font-weight: normal;
