--- a/trunk/theme/theme.css
+++ b/trunk/theme/theme.css
@@ -123,7 +123,7 @@ h1, h2, h3, h4, h5, h6{
 	background-color: #feff9b;
 }
 
-.home .description{
+.site-home  .description{
 	float:right;
 	font-size:200%;
 	padding:15px;
@@ -132,7 +132,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 
-.home .description{
+.site-home  .description{
 	float:right;
 	font-size:200%;
 	line-height:30px;
