--- a/trunk/theme/theme.css
+++ b/trunk/theme/theme.css
@@ -42,6 +42,16 @@ h1, h2, h3, h4, h5, h6{
 .previews{
 	position: relative;
 }
+
+.float-bubblearrow {
+	background:url("./images/bubblearrow.png") no-repeat scroll 0 0 transparent;
+	height:22px;
+	left:100px;
+	position:absolute;
+	top:20px;
+	width:10px;
+}
+
 .bubblearrow {
 	background:url("./images/bubblearrow.png") no-repeat scroll 0 0 transparent;
 	height:22px;
@@ -734,6 +744,7 @@ a:hover{
 #live-post-search{
 	width: 95%;
 }
+
 
 #content {
 
