--- a/trunk/core/css/core.css
+++ b/trunk/core/css/core.css
@@ -171,7 +171,7 @@ img{
 
 }
 
-#footer div{
+#footer .foot{
 	padding: 10px;	
 }
 
@@ -415,9 +415,9 @@ img{
 
 
 #dynamic-sidebar{
-	-moz-box-shadow: 1px 2px 3px #AAAAAA;
-	-webkit-box-shadow:1px 2px 3px #AAAAAA;
-	box-shadow: 1px 2px 3px #AAAAAA;
+	-moz-box-shadow: 2px 2px 8px #AAAAAA;
+	-webkit-box-shadow:2px 2px 8px #AAAAAA;
+	box-shadow: 2px 2px 8px #AAAAAA;
 	border: 1px solid #eee;	
 	overflow-y: auto;
 	padding:10px;
