--- a/trunk/themes/digressit-default/style.css
+++ b/trunk/themes/digressit-default/style.css
@@ -925,3 +925,52 @@ div#item-header{
 .rule-dashboard{
 	display: none;
 }
+
+
+.mu_register{
+	line-height: 45px;
+
+}
+
+.mu_register h2{
+	padding-left : 0;
+}
+
+.mu_register input[type=text]{
+	width: 100% !important;
+	position: relative !important;
+	font-size:14px !important;
+	margin:5px 0;
+}
+
+.mu_register input[type=submit]{
+	width: 50% !important;
+	position: relative !important;
+}
+
+
+.mu_register .submit {
+	background: none !important;
+	color: black !important;
+	font-size: auto !important;
+	font-weight: normal !important;
+	letter-spacing: auto !important;
+	padding: auto !important;
+	position:relative; !important;
+	right: auto !important;
+	left: 0 !important;
+	text-align: left !important;
+	-moz-box-shadow: none!important;
+}
+
+.widecolumn{
+	-moz-box-shadow:0 25px 30px #AAAAAA !important;
+}
+
+
+
+#signup-welcome, .mu_register .view{
+	padding-left: 20px;
+}
+
+
