--- a/trunk/themes/digressit-wireframe/style.css
+++ b/trunk/themes/digressit-wireframe/style.css
@@ -6,7 +6,7 @@ Author: Eddie A Tejeda
 Version: 3.0
 Author URI: http://www.visudo.com
 License: GPLv2 (http://creativecommons.org/licenses/GPL/2.0/)
-Tags: buddypress
+Tags: buddypress, annotation, comments, discussion, documents
 */
 
 
