fixed Issue #117 fixed issue #112 fixed issue #99 fixed issue #116
* changed the way ajax comments are handled. now they conform to whatever the theme comments function uses
* disabled regexp_digressit_content_parser. it's not really being used and it doesn't work well anyway
* fixed live comment and live content search - options available on backend
* removed livesearch widget. feature redudant
* support for custom, and nested  menus in frontpage
* performance boost: consolidated all the JS files into one file that will be minified.
* reintroduced the ability to parse_item_lists in content
* reintroduced the ability to sort by date and id, ascending and decending, in backend

--- a/trunk/themes/digressit-default/style.css
+++ b/trunk/themes/digressit-default/style.css
@@ -32,6 +32,43 @@ body{
 	text-align:left;
 }
 
+#live-content-search, #live-comment-search{
+    border: 1px solid #CCCCCC;
+    padding: 5px;
+}
+
+#instant-content-search, #instant-comment-search{
+    float: left;
+    left: 20px;
+    position: relative;
+    top: 5px;
+	margin-right: 10px;
+}
+
+#live-content-search-result, #live-comment-search-result{
+    background-color: white;
+    position: absolute;
+    z-index: 100;
+}
+
+
+
+.search-result{
+    border-color: -moz-use-text-color #AAAAAA #AAAAAA;
+    border-right: 1px solid #AAAAAA;
+    border-style: none solid solid;
+    border-width: 0 1px 1px;
+    font-size: 75%;
+    padding: 5px;
+	min-width: 149px;
+}
+.search-result a{
+	text-decoration: none;
+	
+}
+.search-result:hover{
+	background-color: #FEFF9B;
+}
 
 #wrapper{
 	background: transparent repeat scroll 0 0 #E6E6E6;
