fixed #119 fixed #118 fixed #115

--- a/trunk/themes/digressit-default/style.css
+++ b/trunk/themes/digressit-default/style.css
@@ -52,6 +52,9 @@ body{
 }
 
 
+#menu-primary .children{
+	display: none;
+}
 
 .search-result{
     border-color: -moz-use-text-color #AAAAAA #AAAAAA;
