--- a/trunk/core/css/core.css
+++ b/trunk/core/css/core.css
@@ -52,6 +52,985 @@ h1, h2, h3, h4, h5, h6, h7, h8{
 
 
 
+
+.widget-header  {
+	background-color:#D5E8F1;
+	border-bottom:1px solid #637D8E;
+	font-weight:bold;
+	left:5px;
+	padding:5px 35px;
+	text-transform:uppercase;
+}
+
+#dynamic-topbar .widget_text{
+	margin: 0 auto;
+	width: 800px;
+}
+
+#topbar-toggle-visibility{
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	right: 5%;
+}
+
+#mainpage {
+	position: relative;
+}
+#mainpage .preview{
+
+	background-color:white;
+	display:none;
+	height:100%;
+	min-height:200px;
+	padding:0;
+	position:relative;
+	top:0;
+
+}
+
+#mainpage .navigation{
+	float:left;
+	width:30%;
+	min-height:1000px;
+	padding-right:15px;
+	top:0;
+	padding-left:25px;
+	
+}
+
+#mainpage .default{
+	display: block;
+}
+
+
+
+.toc{
+
+}
+
+
+
+
+#mainpage .menu-frontpage-container{
+	float: left;
+	width: 30%;
+	min-height: 800px;
+}
+
+#mainpage .widget_text,
+#mainpage .widget_links, 
+#mainpage .widget_meta, 
+#mainpage .widget_calendar, 
+#mainpage .widget_pages, 
+#mainpage .widget_tag_cloud, 
+#mainpage .widget_search,
+#mainpage .previews
+{
+    -moz-box-shadow: 3px 3px 7px #BBBCBD;
+    border: 1px solid #BBBCBD;
+    float: right;
+    margin: 10px;
+    padding: 5px 10px 20px 15px;
+    width: 550px;
+	
+}
+#mainpage .previews{
+
+}
+
+#content #digress-it-list-posts{
+	width: 50%;
+	position: relative;
+}
+
+#content #digress-it-list-posts .commentcount1,
+#content #digress-it-list-posts .commentcount2,
+#content #digress-it-list-posts .commentcount3{
+	right: 0;
+	position: relative;
+	padding-top: 3px;
+}
+
+
+#mainpage .widget_text{
+
+}
+
+
+.navigation .sub-menu{
+	padding-left: 10px;
+}
+.navigation .sub-menu li{
+	list-style: disc;
+}
+
+
+
+.list-style-none{
+	padding-left:5px !important;
+}
+
+.list-style-none li{
+	list-style: none!important;
+}
+
+.list-style-decimal li{
+	list-style: decimal !important;
+}
+
+
+
+.list-style-square li{
+	list-style: square!important;
+}
+.list-style-circle li{
+	list-style: circle!important;
+}
+
+
+.list-style-lower-roman li{
+	list-style: lower-roman!important;
+}
+.list-style-upper-roman li{
+	list-style: upper-roman!important;
+}
+
+
+.list-style-upper-alpha li{
+	list-style: upper-alpha!important;
+}
+.list-style-lower-alpha li{
+	list-style: lower-alpha!important;
+}
+
+
+/* Lightbubbles  */
+div.bubble {
+	width: auto;
+	font-size: 0.75em;
+	margin-bottom: 24px;
+}
+
+div.bubble blockquote {
+	margin: 0px;
+	padding: 0px;
+	border: 1px solid #c9c2c1;
+	background-color: #fff;
+}
+
+div.bubble blockquote p {
+	margin: 10px;
+	padding: 0px;
+}
+
+div.bubble cite {
+	position: relative;
+	margin: 0px;
+	padding: 7px 0px 0px 15px;
+	top: 6px;
+	background: transparent url(images/tip.gif) no-repeat 20px 0;
+	font-style: normal;
+}
+
+/* Rounded Bubble */
+div.bubble div.rounded {
+	margin-bottom: 10px;
+	border: 3px solid #fff;
+	background-color: #b7e0ff;
+}
+div.bubble div.rounded blockquote {
+	border: 0;
+	background-color: transparent;
+}
+div.bubble div.rounded blockquote p {
+	margin: 0px 10px;
+}
+div.bubble cite.rounded {
+	position: relative;
+	margin: 0px;
+	padding-left: 15px;
+	padding-top: 12px;
+	top: 9px;
+	background: transparent url(images/tip-rounded.gif) no-repeat 15px 0;
+}
+
+/* Pimped Bubble */
+div#pimped.bubble {
+	font-size: 0.9em;
+}
+div#pimped.bubble div.rounded {
+	color: #fff;
+	border: 3px solid #fff;
+	background-color: #111;
+}
+div#pimped.bubble cite.rounded {
+	background: transparent url(images/tip-pimped.gif) no-repeat 15px 0;
+}
+
+
+/************ LIGHTBOX INTERFACE *************/
+
+
+.lightbox-content{
+	z-index: 1000;
+	 -moz-box-shadow: 0 0 1em #afafaf;
+	-webkit-box-shadow: 0 0 1em #afafaf;	
+}
+
+
+.lightbox-header{
+	height:20px;
+	left:-6px;
+	padding:0;
+	position:absolute;
+	text-align:left;
+	top:-15px;
+	width:390px;
+	z-index:-1;
+}
+
+.lightbox-content{
+	display:none;
+	z-index: 1000;
+	background-color: white;
+	text-align: left;
+	position:fixed;
+	text-align:left;
+	padding: 25px 50px 25px 40px;
+	background-color: #f4f8f8;
+	border: 6px solid white;
+	 -moz-box-shadow: 0 0 1em #afafaf;
+	-webkit-box-shadow: 0 0 1em #afafaf;	
+
+}
+
+/*
+.lightbox-close{
+	background:url("images/Lightbox_xCloseBTN.png") no-repeat scroll 0 0 transparent;
+	color:white;
+	font-size:16px;
+	font-style:italic;
+	left:0;
+	margin:0;
+	padding:15px;
+	position:absolute;
+	text-align:left;
+	top:0;
+	z-index:5;
+}
+*/
+
+.error{
+	font-size: 14px;
+	color: red;
+}
+
+.absolute{
+	position: absolute;
+}
+.top{
+	top: 0;
+}
+
+.left{
+	left: 0;
+}
+
+
+.disabled{
+	background-color: #AAA !important;
+	color: #DDD !important;
+	
+}
+
+.lightbox-content a{
+	text-decoration: none;
+	color: #4A4848;
+}
+
+.lightbox-close{
+	cursor:pointer;cursor:hand;
+	position:absolute;
+	right:0;
+	top:0;
+	padding: 16px;
+}
+
+
+.lightbox-content .ribbon{
+	height:50px;
+	left:-16px;
+	min-width:300px;
+	padding:0 15px 0 0;
+	position:absolute;
+	top:-34px;
+}
+
+.lightbox-content  .ribbon-left{
+	height:55px;
+	margin:0;
+	position:absolute;
+	width:10px;
+}
+.lightbox-content .ribbon-title{
+	color:white;
+	display:inline;
+	font-size:20px;
+	height:35px;
+	left:10px;
+	margin:0;
+	padding:6px 21px 0 10px;
+	width: 55%;
+	position:absolute;
+}
+.lightbox-content  .ribbon-right{
+	height:36px;
+	left:68%;
+	margin:0;
+	position:absolute;
+	width:15px;
+}
+
+
+.ribbon-login{
+	padding: 10px 20px;	
+	margin: 0;
+	
+}
+.ribbon-register{
+	padding: 10px 20px;	
+	margin: 0;
+
+}
+
+
+
+
+
+.lightbox-submit, .lightbox-button {
+	background:none repeat scroll 0 0 #409DD7;
+	color:white;
+	font-size:18px;
+	font-weight:bold;
+	min-width:auto;
+	padding:10px;
+	text-align:right;
+	width:auto
+}
+
+.lightbox-content input{
+	background-color:#FEFEE0;
+	color:#666666;
+	font-size:20px;
+	padding:5px;
+}
+
+.lightbox-button:hover, .lightbox-submit:hover{
+	cursor:pointer;cursor:hand;
+}
+
+.lightbox-submit{
+	position: absolute;
+	bottom:0;
+	right: 0;
+}
+
+
+
+.toolbar{
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+
+#lightbox-login .lightbox-header{
+
+}
+
+.lightbox-content form{
+	z-index: 100;
+	padding-bottom:40px;
+}
+
+a:hover{
+	cursor:pointer;cursor:hand;
+}
+
+.lightbox-transparency{
+	background-color: black;
+	z-index: 110;
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";	
+	filter: alpha(opacity=50);
+	opacity: .5;
+	width: 100000;
+	height: 100000;
+	
+}
+
+.comment-sticky{
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	background-color: black;
+}
+
+.comment .comment-sticky{
+	background-color: transparent;
+}
+
+
+.lightbox-register:hover{
+	text-decoration: underline;
+}
+.lightbox-reset-password:hover{
+	text-decoration: underline;
+}
+
+
+#lightbox-login{
+/*	background:none repeat scroll 0 0 white;
+	border:1px solid;
+	display:none;
+	padding:15px 108px 50px 90px;
+	position:absolute;
+	text-align:left;
+	z-index:200;		
+	height: auto;
+	width: auto;*/
+}
+
+#lightbox-moderate-comment-sticky{
+
+
+}
+#lightbox-moderator-log {
+	display:none;
+}
+
+
+#lightbox-survey{
+
+}
+
+
+
+.lightbox-next{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+
+}
+
+.lightbox-previous{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+
+.lightbox-slider{
+	width: auto;
+	height: auto;
+}
+
+
+.lightbox-content input, .lightbox-content textarea{
+	background:none repeat scroll 0 0 #FBFBFB;
+	border:1px solid #E5E5E5;
+	font-size:24px;
+	margin-bottom:16px;
+	margin-right:6px;
+	margin-top:2px;
+	padding:3px;
+	width:auto;
+}
+
+.lightbox-slot{
+	position: relative;
+	left: 10;
+}
+
+
+.lightbox-content .input{
+	background:none repeat scroll 0 0 #FBFBFB;
+	border:1px solid #E5E5E5;
+	font-size:24px;
+	margin-bottom:16px;
+	margin-right:6px;
+	margin-top:2px;
+	padding:3px;
+	width:auto;
+}
+
+.lightbox-content p {
+	padding-bottom: 0;
+}
+
+
+.lightbox-content{
+}
+
+
+.lightbox-content input {
+	background-color: white !important;
+	font-size:15px !important;
+}
+
+
+
+
+.lightbox-slot-5{
+	position: absolute;
+}
+
+
+
+
+
+
+.submit{
+	background:none repeat scroll 0 0 #409DD7;
+	color:white;
+	font-size:12px;
+	font-weight:bold;
+	letter-spacing:1px;
+	padding:5px 10px;
+	position:absolute;
+	right:0;
+	text-align:right;
+}
+
+.submit:hover{
+	cursor:pointer;cursor:hand;
+}
+
+.submit{
+	/*
+	position: absolute;
+	bottom:0;
+	right: 0;
+	*/
+}
+
+.comment-reply{
+/*	background-color:black;
+	color:white;
+	cursor:pointer;
+	display:none;
+	height:20px;
+	padding:0 45px;
+	position:absolute;
+	right:-10px;
+	top:-1px; */
+
+}
+
+.comment-goto  {
+	cursor:pointer;
+	display:none;
+	padding:0 10px;
+	position:absolute;
+	right:0;
+	top:0;
+}
+
+.comment-reply a{
+	color: white;
+	text-decoration: none;
+}
+.comment-goto a{
+	color: white;
+	text-decoration: none;
+}
+
+
+#comments-toolbar #cancel-response{
+
+}
+
+#cancel-response{
+	display: inline;
+	display: none;
+}
+
+
+.comment-text a {
+	border-bottom:1px dotted #409DD7;
+	color:#409DD7;
+	text-decoration:none;
+}
+
+.children{
+	margin: 0px
+}
+
+.children .children{
+	margin: -0px 0 0px;
+background:  none;
+}
+
+.children .depth-2{
+	margin: 0 0px 0px 20px;
+}
+
+.children .depth-3{
+	margin: 0px 0 0 40px;
+}
+
+
+
+
+.comment-header{
+	/*
+	height:20px;
+	left:5%;
+	position:absolute;
+	right:10px;
+	top:-19px;
+	text-align: right;
+	*/
+}
+
+.comment-date{
+	float:right;
+	font-size:12px;
+	font-weight:bold;
+	margin-right: 15px;
+	margin-left: 0px;
+}
+
+.comment-author{
+	width: 200px;
+	display: inline;
+	font-weight: bold;
+	text-align: left;
+}
+.comment-author a{
+	color: black;
+	text-decoration: none;
+}
+
+
+.comment-meta{
+	position:absolute;
+	right:0;
+	top:5px;
+	width:300px;
+}
+
+.comment-text{
+/*	color: black; */
+	clear: both;
+	margin-top: 5px;
+}
+.comment-text p{
+	padding: 0px;
+}
+
+
+.children  .comment-header{
+/*	left:10%; */
+}
+
+.children .children .comment-header{
+/*	left:15%;	*/
+}
+
+
+#comment-browser .comment-goto {
+	display: block;
+}
+
+.comment-browser h3{
+	padding-top: 20px;
+}
+
+
+
+#sidebar{
+	border: none;
+	width: 125px;
+	height: 100%;
+/*	left: 50px; */
+	text-align: left;
+	position: absolute;
+	background:  #F3F8F8;
+	top: 0;
+}
+
+#transparent-border{
+	background: black;
+	filter: alpha(opacity=02);
+	opacity: 0.02;
+	right: 0;
+	height: 100%;	
+	position: absolute;
+	width: 6px;
+	top: 0;
+}
+
+
+#fixed-sidebar{
+	padding-top:0;
+	position:absolute;
+	text-align:left;
+	top:-24px;
+	z-index:10;
+}
+
+
+.sidebar{
+	min-height:500px;
+	height: 100%;
+	text-align:left;
+/*	top:100px; */
+	width:250px;
+	z-index:100;
+	border-style:solid;
+	border-width:0 2px 0 0;
+	height:100%;
+/*	-moz-box-shadow: 0 0 1em #AAAAAA */
+
+}
+
+.sidebar a:hover{
+	color: black;
+	text-decoration: none;
+}
+
+ul{
+/*	margin-left:; */
+	padding: 0;
+	padding-left: 10px;
+}
+.sidebar ul{
+	margin: 0;
+	padding: 0;
+}
+.sidebar h3, .sidebar h4{
+	color:#989898;
+	font-size:13px;
+	font-style:italic;
+	font-weight:normal;
+	margin:0 0 0 0;
+	padding:5px 0 1px;
+}
+
+.sidebar .sidebar-item {
+	border-style:solid;
+	border-width:0 3px 0 0;
+	margin-bottom:5px;
+	padding-left:20px;
+	padding-top:2px;
+	text-align:left;
+	width:220px;
+	
+}
+.sidebar .sidebar-upcoming{
+	background: #FFF;
+	border-color:#cacaca;
+/*	background:url("images/RuleHome/hash.png") no-repeat 225px center  #FFF; */
+}
+
+.sidebar .sidebar-previous{
+	background-color: white;
+	border-color:#f5d46d;
+/*	background:url("images/RuleHome/check.png")  no-repeat 225px center white; */
+}
+
+.sidebar-text{
+	padding-right: 15px;
+}
+
+.sidebar .sidebar-current{
+	background-color: #f5d46d;
+	border-color:#efb132;
+	border-width: 0 4px 0px 0;	
+/*	background:url("images/RuleHome/o.png")  no-repeat 225px center #f5d46d; */
+	
+}
+.sidebar-item a{
+	padding-right: 5px;
+}
+.sidebar .sidebar-current a{
+	color: black !important;	
+	font-weight: bold;
+}
+
+.single #sidebar{
+	left: -250px;	
+}
+
+
+/* SIDEBAR */
+.sidebar .sidebar-item{
+	border : 0px !important;
+}
+
+.sidebar .sidebar-item .commentcount1, .sidebar .sidebar-item .commentcount2, .sidebar .sidebar-item .commentcount3{
+	right: 0;
+	padding-right: 0px;
+}
+
+.sidebar .sidebar-item{
+	padding: 3px 25px;
+}
+.sidebar-text{
+	padding-right:10px;
+}
+
+.sidebar .sidebar-item{
+	width: 240px;
+	padding: 3px 25px;
+}
+
+
+.sidebar-text a{
+	text-decoration: none;
+}
+
+.sidebar-text a:hover{
+	text-decoration: none;
+	color:#409DD7;
+	text-decoration:none;
+}
+
+.sidebar{
+	padding-top: 10px;
+}
+.sidebar .sidebar-item {
+	margin-left:-20px;
+}
+.sidebar h3{
+	margin:0 0 0 0;
+}
+
+#dynamic-sidebar {
+	overflow-x: visible;
+}
+
+.sidebar-widgets .widget_text{
+	font-size:93%;
+}
+
+.frontpage #text-6-sidebar{
+	background-color: #d0ebf3;
+}
+
+.frontpage #text-6-sidebar {
+	background-color:#D0EBF3;
+	border-bottom:1px solid #B8D0D7;
+	border-top:1px solid #B8D0D7;
+}
+.frontpage .sidebar-widgets{
+	display: none;
+
+}
+
+.text-6-sidebar .widget_text a{
+	border-bottom:0px !important;
+	
+}
+
+.page #dynamic-sidebar{
+
+}
+
+
+
+#comments-toolbar{
+	background:none repeat scroll 0 0 transparent;
+	border-width:0 0 2px;
+	overflow:hidden;
+	padding:0;
+	position:fixed;
+	top:100px;
+	width:414px;
+	z-index:100;
+	display: none;
+	padding: 3px 0 0;
+	
+/*	-moz-box-shadow: 5px 10px 1em #CCCCCC; */
+}
+
+
+#comments-toolbar #comment{
+	height: 20px;
+}
+
+.single #commentbox {
+	overflow-x: hidden;
+	overflow-y: scroll;
+/*	background: none repeat scroll 0 0 transparent; */
+	overflow-y: scroll;
+/*	-moz-box-shadow: 5px 10px 1em #CCC; */
+/*	overflow:hidden;
+	overflow-x:hidden; */
+	border:1px solid #B4BDBD;
+
+		
+}
+
+
+.recaptcha-submit{
+	float: right;
+}
+
+
+
+.type-post .widget_text,
+.type-post .widget_links, 
+.type-post .widget_meta, 
+.type-post .widget_calendar, 
+.type-post .widget_pages, 
+.type-post .widget_tag_cloud, 
+.type-post .widget_search,
+.type-post .previews,
+.type-post .widget_text{
+    margin: 3px;
+    padding: 25px;
+    width: 451px;
+}
+
+.navigation-next{
+	float: right;
+	font-size: 75%;
+}
+
+.navigation-previous{
+	float: left;
+	font-size: 75%;
+	
+}
+#no-comments{
+	background:none repeat scroll 0 0 white;
+	border:1px solid #DDDDDD;
+	color:#474747;
+	display:none;
+	margin:10px 5px;
+	padding:10px;
+}
+
+#respond{
+	border-width:2px 0;
+	height:100%;
+	margin-left:0px;
+	margin-right:0px;
+	margin-top:5px;
+	padding:5px 0 40px;
+	text-align:left;
+	width:100%;
+	display: none;
+}
+
+
 /*********** PRIMARY MENU **************/
 
 #menu-primary{
