--- a/trunk/themes/digressit-default/style.css
+++ b/trunk/themes/digressit-default/style.css
@@ -413,10 +413,11 @@ z-index:0;
 .commentcount1 {
 	background:url("images/comment_blue_1digit.png") no-repeat scroll 1px 2px transparent;
 	color:white;
-	font-size:12px;
+	font-size:10px;
 	font-weight:bold;
 	height:18px;
-	padding:0 9px;
+	padding:0 4px;
+	text-align: center;
 	position:absolute;
 	width:15px;
 }
