--- a/trunk/themes/digressit-default/style.css
+++ b/trunk/themes/digressit-default/style.css
@@ -1095,3 +1095,26 @@ div#item-header{
 #lightbox-login {
     margin: 0;
 }
+
+.paragraphembed {
+	font-size: 120%;
+	left: -15px;
+	position: absolute;
+	top: 35px;
+}
+
+.paragraphembed a {
+	border-bottom:none !important;
+	padding: 3px;
+}
+
+.embedcode {
+	display: none;
+	position: absolute;
+	left: 10px;
+	top: 0px;
+	padding: 5px;
+	z-index: 100;
+}
+
+.embedcode:hover { display: block; }
