--- a/trunk/themes/digressit-default/style.css
+++ b/trunk/themes/digressit-default/style.css
@@ -1120,5 +1120,5 @@ div#item-header{
 	min-width: 200px;
 }
 .embedcode b { font-size: 13px; }
-.embedcode:hover { display: block; }
+.embedcode:hover, .embedcode input:focus, .empedcode textarea:focus { display: block; }
 .closeme { position: absolute; font-size: 60%; right: 3px; top: -1px; }
