--- a/trunk/themes/digressit-wireframe/style.css
+++ b/trunk/themes/digressit-wireframe/style.css
@@ -3,15 +3,24 @@ Theme Name: Digress.it Wireframe
 Theme URI: http://digress.it
 Description: Digress.it allows readers to comment paragraph by paragraph in the margins of a text. You can use it to comment, gloss, workshop, debate and more!
 Author: Eddie A Tejeda
-Version: 3.0
+Version: 3.2
 Author URI: http://www.visudo.com
 License: GPLv2 (http://creativecommons.org/licenses/GPL/2.0/)
 Tags: buddypress, annotation, comments, discussion, documents
+
+Special thanks to:	
+The developers of JQuery @ www.jquery.com
+Joss Winn, Tony Hirst and Alex Bilbie @ University of Lincoln 
+Jesse Wilbur, Ben Vershbow, Dan Visel and Bob Stein @ futureofthebook.org
+
+Previous Versions:
+Mark James, for the famfamfam iconset @ http://www.famfamfam.com/lab/icons/silk/
+Matteo Bicocchi @ www.open-lab.com
+
 */
 
 
 body{
-	font-family: "Times New Roman PS MT","Times New Roman",Times,serif;
 	font-size: 100%;
 	background-color:#E6E6E6;
 }
