--- a/trunk/themes/digressit-default/style.css
+++ b/trunk/themes/digressit-default/style.css
@@ -1095,6 +1095,10 @@ div#item-header{
 	top: 35px;
 }
 
+.embedcode{
+	box-shadow: 3px 3px 3px #AAAAAA;
+
+}
 .paragraphembed a {
 	border-bottom:none !important;
 	padding: 3px;
