--- a/trunk/themes/digressit-wireframe/style.css
+++ b/trunk/themes/digressit-wireframe/style.css
@@ -4,9 +4,9 @@ Theme URI: http://digress.it
 Description: Digress.it allows readers to comment paragraph by paragraph in the margins of a text. You can use it to comment, gloss, workshop, debate and more!
 Author: Eddie A Tejeda
 Version: 3.2
-Author URI: http://www.visudo.com
+Author URI: http://eddietejeda.com
 License: GPLv2 (http://creativecommons.org/licenses/GPL/2.0/)
-Tags: buddypress, annotation, comments, discussion, documents
+Tags: buddypress, comments, annotation, discussion, commenting, paragraph, education, transparency
 
 Special thanks to:	
 The developers of JQuery @ www.jquery.com
@@ -18,10 +18,4 @@ Mark James, for the famfamfam iconset @ http://www.famfamfam.com/lab/icons/silk/
 Matteo Bicocchi @ www.open-lab.com
 
 */
-
-
-body{
-	font-size: 100%;
-	background-color:#E6E6E6;
-}
 
